src/main/gen/com/github/dweindl/intellijAntimony/parser/AntimonyParser.java
// This is a generated file. Not intended for manual editing.
package com.github.dweindl.intellijAntimony.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.github.dweindl.intellijAntimony.psi.AntimonyTypes.*;
import static com.github.dweindl.intellijAntimony.parser.AntimonyParserUtil.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class AntimonyParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType root_, PsiBuilder builder_) {
    parseLight(root_, builder_);
    return builder_.getTreeBuilt();
  }

  public void parseLight(IElementType root_, PsiBuilder builder_) {
    boolean result_;
    builder_ = adapt_builder_(root_, builder_, this, EXTENDS_SETS_);
    Marker marker_ = enter_section_(builder_, 0, _COLLAPSE_, null);
    result_ = parse_root_(root_, builder_);
    exit_section_(builder_, 0, marker_, root_, result_, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType root_, PsiBuilder builder_) {
    return parse_root_(root_, builder_, 0);
  }

  static boolean parse_root_(IElementType root_, PsiBuilder builder_, int level_) {
    return antimonyFile(builder_, level_ + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(AND_EXPR, ARITHMETIC_EXPR, COMPARISON_EXPR, EXPR,
      LITERAL_EXPR, LOGICAL_EXPR, MUL_EXPR, NOT_EXPR,
      OR_EXPR, PAREN_EXPR, PLUS_EXPR, POWER_EXPR,
      RATE_EXPR, REF_EXPR, SPECIES_EXPR),
  };

  /* ********************************************************** */
  // AND not_expr
  public static boolean and_expr(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "and_expr")) return false;
    if (!nextTokenIs(builder_, "<expression>", AND)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _LEFT_, AND_EXPR, "<expression>");
    result_ = consumeToken(builder_, AND);
    result_ = result_ && not_expr(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // identifier annotation_keywords (string | MULTILINE_STRING) ("," EOL? string)* (SEMI | EOL)
  public static boolean annotation(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "annotation")) return false;
    if (!nextTokenIs(builder_, ID)) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ANNOTATION, null);
    result_ = identifier(builder_, level_ + 1);
    result_ = result_ && annotation_keywords(builder_, level_ + 1);
    pinned_ = result_; // pin = 2
    result_ = result_ && report_error_(builder_, annotation_2(builder_, level_ + 1));
    result_ = pinned_ && report_error_(builder_, annotation_3(builder_, level_ + 1)) && result_;
    result_ = pinned_ && annotation_4(builder_, level_ + 1) && result_;
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  // string | MULTILINE_STRING
  private static boolean annotation_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "annotation_2")) return false;
    boolean result_;
    result_ = consumeToken(builder_, STRING);
    if (!result_) result_ = consumeToken(builder_, MULTILINE_STRING);
    return result_;
  }

  // ("," EOL? string)*
  private static boolean annotation_3(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "annotation_3")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!annotation_3_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "annotation_3", pos_)) break;
    }
    return true;
  }

  // "," EOL? string
  private static boolean annotation_3_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "annotation_3_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, COMMA);
    result_ = result_ && annotation_3_0_1(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, STRING);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // EOL?
  private static boolean annotation_3_0_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "annotation_3_0_1")) return false;
    consumeToken(builder_, EOL);
    return true;
  }

  // SEMI | EOL
  private static boolean annotation_4(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "annotation_4")) return false;
    boolean result_;
    result_ = consumeToken(builder_, SEMI);
    if (!result_) result_ = consumeToken(builder_, EOL);
    return result_;
  }

  /* ********************************************************** */
  // "notes"
  //     | "is"
  //     | "identity"
  //     | "part"
  //     | "hasPart"
  //     | "biological_entity_is"
  //     | "isPartOf"
  //     | "parthood"
  //     | "isVersionOf"
  //     | "hypernym"
  //     | "hasVersion"
  //     | "version"
  //     | "isHomologTo"
  //     | "homolog"
  //     | "isDescribedBy"
  //     | "description"
  //     | "isEncodedBy"
  //     | "encoder"
  //     | "encodes"
  //     | "encodement"
  //     | "occursIn"
  //     | "container"
  //     | "hasProperty"
  //     | "property"
  //     | "isPropertyOf"
  //     | "propertyBearer"
  //     | "hasTaxon"
  //     | "taxon"
  //     | "created"  // TODO: date
  //     | "modified" // TODO: date
  //     | "creator.name"
  //     | "creator.givenName"
  //     | "creator.familyName"
  //     | "creator.organization"
  //     | "creator.email"
  public static boolean annotation_keywords(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "annotation_keywords")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ANNOTATION_KEYWORDS, "<annotation keywords>");
    result_ = consumeToken(builder_, NOTES);
    if (!result_) result_ = consumeToken(builder_, IS);
    if (!result_) result_ = consumeToken(builder_, IDENTITY);
    if (!result_) result_ = consumeToken(builder_, PART);
    if (!result_) result_ = consumeToken(builder_, "hasPart");
    if (!result_) result_ = consumeToken(builder_, "biological_entity_is");
    if (!result_) result_ = consumeToken(builder_, "isPartOf");
    if (!result_) result_ = consumeToken(builder_, "parthood");
    if (!result_) result_ = consumeToken(builder_, "isVersionOf");
    if (!result_) result_ = consumeToken(builder_, "hypernym");
    if (!result_) result_ = consumeToken(builder_, "hasVersion");
    if (!result_) result_ = consumeToken(builder_, "version");
    if (!result_) result_ = consumeToken(builder_, "isHomologTo");
    if (!result_) result_ = consumeToken(builder_, "homolog");
    if (!result_) result_ = consumeToken(builder_, "isDescribedBy");
    if (!result_) result_ = consumeToken(builder_, "description");
    if (!result_) result_ = consumeToken(builder_, "isEncodedBy");
    if (!result_) result_ = consumeToken(builder_, "encoder");
    if (!result_) result_ = consumeToken(builder_, "encodes");
    if (!result_) result_ = consumeToken(builder_, "encodement");
    if (!result_) result_ = consumeToken(builder_, "occursIn");
    if (!result_) result_ = consumeToken(builder_, "container");
    if (!result_) result_ = consumeToken(builder_, "hasProperty");
    if (!result_) result_ = consumeToken(builder_, "property");
    if (!result_) result_ = consumeToken(builder_, "isPropertyOf");
    if (!result_) result_ = consumeToken(builder_, "propertyBearer");
    if (!result_) result_ = consumeToken(builder_, "hasTaxon");
    if (!result_) result_ = consumeToken(builder_, "taxon");
    if (!result_) result_ = consumeToken(builder_, "created");
    if (!result_) result_ = consumeToken(builder_, "modified");
    if (!result_) result_ = consumeToken(builder_, "creator.name");
    if (!result_) result_ = consumeToken(builder_, "creator.givenName");
    if (!result_) result_ = consumeToken(builder_, "creator.familyName");
    if (!result_) result_ = consumeToken(builder_, "creator.organization");
    if (!result_) result_ = consumeToken(builder_, "creator.email");
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // identifier "." identifier
  public static boolean annotation_type(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "annotation_type")) return false;
    if (!nextTokenIs(builder_, ID)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = identifier(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, DOT);
    result_ = result_ && identifier(builder_, level_ + 1);
    exit_section_(builder_, marker_, ANNOTATION_TYPE, result_);
    return result_;
  }

  /* ********************************************************** */
  // root_item * <<eof>>
  static boolean antimonyFile(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "antimonyFile")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = antimonyFile_0(builder_, level_ + 1);
    result_ = result_ && eof(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // root_item *
  private static boolean antimonyFile_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "antimonyFile_0")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!root_item(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "antimonyFile_0", pos_)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // (BACKSLASH EOL)* factor plus_expr *
  public static boolean arithmetic_expr(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "arithmetic_expr")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _COLLAPSE_, ARITHMETIC_EXPR, "<expression>");
    result_ = arithmetic_expr_0(builder_, level_ + 1);
    result_ = result_ && factor(builder_, level_ + 1);
    result_ = result_ && arithmetic_expr_2(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // (BACKSLASH EOL)*
  private static boolean arithmetic_expr_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "arithmetic_expr_0")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!arithmetic_expr_0_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "arithmetic_expr_0", pos_)) break;
    }
    return true;
  }

  // BACKSLASH EOL
  private static boolean arithmetic_expr_0_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "arithmetic_expr_0_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeTokens(builder_, 0, BACKSLASH, EOL);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // plus_expr *
  private static boolean arithmetic_expr_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "arithmetic_expr_2")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!plus_expr(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "arithmetic_expr_2", pos_)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // "$"? identifier ("in" compartment_id)? "=" expr
  public static boolean assignment(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "assignment")) return false;
    if (!nextTokenIs(builder_, "<assignment>", DOLLAR, ID)) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ASSIGNMENT, "<assignment>");
    result_ = assignment_0(builder_, level_ + 1);
    result_ = result_ && identifier(builder_, level_ + 1);
    result_ = result_ && assignment_2(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, EQ);
    pinned_ = result_; // pin = 4
    result_ = result_ && expr(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  // "$"?
  private static boolean assignment_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "assignment_0")) return false;
    consumeToken(builder_, DOLLAR);
    return true;
  }

  // ("in" compartment_id)?
  private static boolean assignment_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "assignment_2")) return false;
    assignment_2_0(builder_, level_ + 1);
    return true;
  }

  // "in" compartment_id
  private static boolean assignment_2_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "assignment_2_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, IN);
    result_ = result_ && compartment_id(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // "$"? identifier ("in" compartment_id)? ":=" expr
  public static boolean assignment_rule(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "assignment_rule")) return false;
    if (!nextTokenIs(builder_, "<assignment rule>", DOLLAR, ID)) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ASSIGNMENT_RULE, "<assignment rule>");
    result_ = assignment_rule_0(builder_, level_ + 1);
    result_ = result_ && identifier(builder_, level_ + 1);
    result_ = result_ && assignment_rule_2(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, ASSIGN_EQ);
    pinned_ = result_; // pin = 4
    result_ = result_ && expr(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  // "$"?
  private static boolean assignment_rule_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "assignment_rule_0")) return false;
    consumeToken(builder_, DOLLAR);
    return true;
  }

  // ("in" compartment_id)?
  private static boolean assignment_rule_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "assignment_rule_2")) return false;
    assignment_rule_2_0(builder_, level_ + 1);
    return true;
  }

  // "in" compartment_id
  private static boolean assignment_rule_2_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "assignment_rule_2_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, IN);
    result_ = result_ && compartment_id(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // arithmetic_expr comparison_op? arithmetic_expr
  public static boolean comparison_expr(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "comparison_expr")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _COLLAPSE_, COMPARISON_EXPR, "<expression>");
    result_ = arithmetic_expr(builder_, level_ + 1);
    result_ = result_ && comparison_expr_1(builder_, level_ + 1);
    result_ = result_ && arithmetic_expr(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // comparison_op?
  private static boolean comparison_expr_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "comparison_expr_1")) return false;
    comparison_op(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // EQEQ | NEQ | LT | LTE | GT | GTE
  public static boolean comparison_op(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "comparison_op")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, COMPARISON_OP, "<comparison op>");
    result_ = consumeToken(builder_, EQEQ);
    if (!result_) result_ = consumeToken(builder_, NEQ);
    if (!result_) result_ = consumeToken(builder_, LT);
    if (!result_) result_ = consumeToken(builder_, LTE);
    if (!result_) result_ = consumeToken(builder_, GT);
    if (!result_) result_ = consumeToken(builder_, GTE);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // ("var" | "const")? "compartment"
  public static boolean compartment_declaration_prefix(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "compartment_declaration_prefix")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, COMPARTMENT_DECLARATION_PREFIX, "<compartment declaration prefix>");
    result_ = compartment_declaration_prefix_0(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, COMPARTMENT);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // ("var" | "const")?
  private static boolean compartment_declaration_prefix_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "compartment_declaration_prefix_0")) return false;
    compartment_declaration_prefix_0_0(builder_, level_ + 1);
    return true;
  }

  // "var" | "const"
  private static boolean compartment_declaration_prefix_0_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "compartment_declaration_prefix_0_0")) return false;
    boolean result_;
    result_ = consumeToken(builder_, VAR);
    if (!result_) result_ = consumeToken(builder_, CONST);
    return result_;
  }

  /* ********************************************************** */
  // identifier
  public static boolean compartment_id(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "compartment_id")) return false;
    if (!nextTokenIs(builder_, ID)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = identifier(builder_, level_ + 1);
    exit_section_(builder_, marker_, COMPARTMENT_ID, result_);
    return result_;
  }

  /* ********************************************************** */
  // MODEL annotation_type string (SEMI | EOL | <<eof>>)
  public static boolean current_model_annotation(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "current_model_annotation")) return false;
    if (!nextTokenIs(builder_, MODEL)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, MODEL);
    result_ = result_ && annotation_type(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, STRING);
    result_ = result_ && current_model_annotation_3(builder_, level_ + 1);
    exit_section_(builder_, marker_, CURRENT_MODEL_ANNOTATION, result_);
    return result_;
  }

  // SEMI | EOL | <<eof>>
  private static boolean current_model_annotation_3(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "current_model_annotation_3")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, SEMI);
    if (!result_) result_ = consumeToken(builder_, EOL);
    if (!result_) result_ = eof(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // declaration_prefix? rule_or_assignment ("," rule_or_assignment)* (SEMI | EOL | LINE_COMMENT)
  public static boolean declaration(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "declaration")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, DECLARATION, "<declaration>");
    result_ = declaration_0(builder_, level_ + 1);
    result_ = result_ && rule_or_assignment(builder_, level_ + 1);
    result_ = result_ && declaration_2(builder_, level_ + 1);
    result_ = result_ && declaration_3(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // declaration_prefix?
  private static boolean declaration_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "declaration_0")) return false;
    declaration_prefix(builder_, level_ + 1);
    return true;
  }

  // ("," rule_or_assignment)*
  private static boolean declaration_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "declaration_2")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!declaration_2_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "declaration_2", pos_)) break;
    }
    return true;
  }

  // "," rule_or_assignment
  private static boolean declaration_2_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "declaration_2_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, COMMA);
    result_ = result_ && rule_or_assignment(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // SEMI | EOL | LINE_COMMENT
  private static boolean declaration_3(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "declaration_3")) return false;
    boolean result_;
    result_ = consumeToken(builder_, SEMI);
    if (!result_) result_ = consumeToken(builder_, EOL);
    if (!result_) result_ = consumeToken(builder_, LINE_COMMENT);
    return result_;
  }

  /* ********************************************************** */
  // species_declaration_prefix | compartment_declaration_prefix | other_declaration_prefix
  static boolean declaration_prefix(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "declaration_prefix")) return false;
    boolean result_;
    result_ = species_declaration_prefix(builder_, level_ + 1);
    if (!result_) result_ = compartment_declaration_prefix(builder_, level_ + 1);
    if (!result_) result_ = other_declaration_prefix(builder_, level_ + 1);
    return result_;
  }

  /* ********************************************************** */
  // identifier EQ expr
  public static boolean event_assignment(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "event_assignment")) return false;
    if (!nextTokenIs(builder_, ID)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = identifier(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, EQ);
    result_ = result_ && expr(builder_, level_ + 1);
    exit_section_(builder_, marker_, EVENT_ASSIGNMENT, result_);
    return result_;
  }

  /* ********************************************************** */
  // event_assignment ("," (BACKSLASH EOL)* event_assignment)*
  public static boolean event_assignments(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "event_assignments")) return false;
    if (!nextTokenIs(builder_, ID)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = event_assignment(builder_, level_ + 1);
    result_ = result_ && event_assignments_1(builder_, level_ + 1);
    exit_section_(builder_, marker_, EVENT_ASSIGNMENTS, result_);
    return result_;
  }

  // ("," (BACKSLASH EOL)* event_assignment)*
  private static boolean event_assignments_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "event_assignments_1")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!event_assignments_1_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "event_assignments_1", pos_)) break;
    }
    return true;
  }

  // "," (BACKSLASH EOL)* event_assignment
  private static boolean event_assignments_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "event_assignments_1_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, COMMA);
    result_ = result_ && event_assignments_1_0_1(builder_, level_ + 1);
    result_ = result_ && event_assignment(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }
